fixed some spacing issues

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -574,9 +574,9 @@ contact.background{
 }
 .hoursTextHeading{
 	position:relative;
-	top:20px;
+	top:15px;
 	left:25px;
-	font-size:20px;
+	font-size:18px;
 	font-family:"Covered By Your Grace", cursive;
 }
 #hoursRegText{
